actual-applications/base-chart/templates/ingress.yaml
#  ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
    - host: k8.macgain.net
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: sample-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - k8.macgain.net
      secretName: k8-macgain-net-tls
